made the hamburger icon more responsive

--- a/about-us.html
+++ b/about-us.html
@@ -10,6 +10,8 @@
     <title>Document</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 
 </head>
@@ -18,12 +20,11 @@
 <body>
     <nav>
 
-        <div class="topnav " id="myTopnav">
+        <div class="topnav" id="myTopnav">
             <img src="/images/hear&soulLogo.png" class="logo-position">
 
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="active hover-underline-animation">ABOUT US</a>
-            <a href="#contact" class="hover-underline-animation">WHAT WE DO</a>
             <a href="#about" class=" hover-underline-animation">GET INVOLVED</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
@@ -34,7 +35,6 @@
     </nav>
 
 
-    <script src="app.js"></script>
 
 
 
@@ -132,7 +132,7 @@
 
     </main>
     <!-- -------------------------------------------------footer -->
-    <div class="footer-gap"></div>
+
     <footer>
         <div class="content">
             <div class="left box">
@@ -173,6 +173,7 @@
 
     </footer>
 
+    <script src="app.js"></script>
 </body>
 
 </html>
