--- a/food-donations.html
+++ b/food-donations.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -10,29 +11,154 @@
     <title>Document</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
+
 <body>
+    <nav>
 
-    <div class="topnav " id="myTopnav">
-        <img src="/images/hear&soulLogo.png" class="logo-position">
+        <div class="topnav" id="myTopnav">
+            <img src="/images/hear&soulLogo.png" class="logo-position">
 
-        <a href="index.html" class="active hover-underline-animation">HOME</a>
-        <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
-        <a href="#contact" class="hover-underline-animation">WHAT WE DO</a>
-        <a href="#getinvolved" class=" hover-underline-animation">GET INVOLVED</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-        <hr>
-    </div>
+            <a href="index.html" class="active hover-underline-animation">HOME</a>
+            <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
+            <a href="#getinvolved" class=" hover-underline-animation">GET INVOLVED</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+            <hr>
+        </div>
+
+    </nav>
+
+
     <div class="food-donations-color">
-        <img src="/images/article_images/food_donations.jpg" class="food-donations">
+        <img src="/images/article_images/food_donations.jpg" class="food-donations-img">
         <span class="article-main-heading">FOOD</span>
         <span class="article-main-heading-2">DONATIONS</span>
+        <div class="article-content">
+            <p>The Heart and Soul Foundation is an organization that is dedicated to helping those in need by providing
+                food support to the children and elderly people in our care. There are many reasons why donating food
+                to our organization is a worthwhile and impactful way to give back to your community. First and
+                foremost, donating food to the Heart and Soul Foundation is a practical way to address food insecurity
+                in the community. Your donation can help ensure that these individuals have access to the necessities
+                they need to stay healthy and nourished. In addition to addressing immediate needs, donating food to
+                the Heart and Soul Foundation can also help promote long-term stability and well-being.
+            <p>When
+                individuals and children have access to healthy and nutritious food, they are better able to focus on
+                other aspects of their lives, such as education, employment, and personal growth. This can help break
+                the cycle of poverty and improve the overall quality of life in your community. Donating food to the
+                Heart and Soul Foundation is also a way to promote a culture of giving and compassion. When we take
+                the time to help those in need, we set an example for others to follow. </p>
 
+            <p>Finally, donating food to the
+                Heart and Soul Foundation is a simple and effective way to make a tangible difference. Unlike some
+                other charitable efforts, your donation will go directly to those who need it most. You can be sure that
+                your contribution will be put to good use, providing real benefits to those who are most vulnerable. In
+                conclusion, donating food to the Heart and Soul Foundation is a practical, impactful, and compassionate
+                way to make a real difference in the lives of those in need. Your donation can address immediate needs,
+                promote long-term stability and well-being, inspire others to get involved, and make a tangible
+                difference in your community.</p>
+
+        </div>
     </div>
-    </nav>
+    <div class="also-in-this-section">
+        <h2>Also in this section</h2>
+
+        <div class="article-1-light-shadow">
+
+            <img src="/images/school-kid.jpg" class="article-1-picture">
+            <h4 class="article-title">FOOD DONATIONS</h4>
+            <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
+                helping those in need by providing
+                food support to the children and elderly people in our care. There are many reasons why donating
+                food
+                to our organization is a worthwhile and impactful way to give back to your community....</p>
+
+            <h5 class="article-1-readmore"><i>
+                    <a href="food-donations.html" class="link">Read More </a>
+                </i></h5>
+
+        </div>
+        <div class="article-2-light-shadow">
+
+            <img src="/images/school-kid.jpg" class="article-1-picture">
+            <h4 class="article-title">Save the children</h4>
+            <p class="article-2-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+            <p class="article-2-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+
+
+
+            <h5 class="article-1-readmore"><i>
+                    <a href="about-us.html" class="link">Read More </a>
+                </i></h5>
+
+        </div>
+        <div class="article-3-light-shadow">
+
+            <img src="/images/school-kid.jpg" class="article-1-picture">
+            <h4 class="article-title">Save the children</h4>
+            <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+            <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+
+
+            <h5 class="article-1-readmore"><i>
+                    <a href="about-us.html" class="link">Read More </a>
+                </i></h5>
+        </div>
+
+        <!-- -------------------------------------------------footer -->
+        <div class="footer-gap"></div>
+        <footer>
+            <div class="content">
+                <div class="left box">
+                    <div class="topic"><span class="und-footer">Contact U</span>S</div>
+                    <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
+                    <p class="und-footer">Ph. : +27 72 456 0669</p>
+                    <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
+
+
+                </div>
+
+                <div class="right box">
+                    <div class="topic">Email us</div>
+                    <form action="https://formspree.io/f/mzboolwv" method="POST">
+                        <label>
+                            <input type="email" placeholder="Enter email address" name="email">
+                        </label>
+                        &nbsp;
+                        <p style="font-size: x-large">Message</p>
+
+                        <label>
+
+                            <textarea name="message" placeholder=" Write a description..."></textarea>
+                        </label>
+                        <input type="submit" name="submit" value="Send">
+                        <div class="media-icons">
+                            <a href="https://www.facebook.com/heartandsoulcommunitycentre" target="_blank"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/heart_and_soul_foundation_/" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
+
+                        </div>
+                    </form>
+                </div>
+
+
+            </div>
+
+        </footer>
+        <script src="app.js"></script>
 </body>
