--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -18,13 +18,12 @@
 <body>
     <nav>
 
-        <div class="topnav " id="myTopnav">
+        <div class="topnav" id="myTopnav">
             <img src="/images/hear&soulLogo.png" class="logo-position">
 
             <a href="index.html" class="active hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
-            <a href="#contact" class="hover-underline-animation">WHAT WE DO</a>
-            <a href="#getinvolved" class=" hover-underline-animation">GET INVOLVED</a>
+            <a href="test.html" class=" hover-underline-animation">GET INVOLVED</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -33,7 +32,7 @@
 
     </nav>
 
-    <!-- Slideshow container -->
+    <!-- --------------------------------------Slideshow container------------------------------- -->
     <div class="slideshow-container">
 
         <div class="mySlides fade">
@@ -92,7 +91,7 @@
         </div>
 
 
-        <h2 class="article-heading-how-we-help-children"><span class="u">HOW WE HELP CHIL</span>DREN</h1>
+        <h2 class="article-heading-how-we-help-children"><span class="u">READ OUR ARTI</span>CLES</h1>
 
 
 
@@ -218,7 +217,9 @@
                 </div>
     </main>
     <!-- -------------------------------------------------footer -->
-
+    <div class="footer-gap">
+        &nbsp;
+    </div>
     <footer>
         <div class="content">
             <div class="left box">
