--- a/gallery.html
+++ b/gallery.html
@@ -19,21 +19,43 @@
                 <img src="images/gallery_images/2.jpg" id="myImg2" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/3.jpg" id="myImg1" />
+                <img src="images/gallery_images/3.jpg" id="myImg3" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/4.jpg" id="myImg1" />
+                <img src="images/gallery_images/4.jpg" id="myImg4" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/5.jpg" id="myImg1" />
+                <img src="images/gallery_images/5.jpg" id="myImg5" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/6.jpg" id="myImg1" />
+                <img src="images/gallery_images/6.jpg" id="myImg6" />
             </div>
+            <div class="gallery__item">
+                <img src="images/gallery_images/7.jpg" id="myImg6" />
+            </div>
+            <div class="gallery__item">
+                <img src="images/gallery_images/8.jpg" id="myImg6" />
+            </div>
+            <div class="gallery__item">
+                <img src="images/gallery_images/9.jpg" id="myImg6" />
+            </div>
+            <div class="gallery__item">
+                <img src="images/gallery_images/10.jpg" id="myImg6" />
+            </div>
+            <div class="gallery__item">
+                <img src="images/gallery_images/11.jpg" id="myImg6" />
+            </div>
+            <div class="gallery__item">
+                <img src="images/gallery_images/12.jpg" id="myImg6" />
+            </div>
+            <div class="gallery__item">
+                <img src="images/gallery_images/13.jpg" id="myImg6" />
+            </div>
+
         </div>
     </div>
 
-    <!-- The Modal -->
+    <!-- The Modal-----------------1--------------------->
     <div id="myModal" class="modal bg">
 
         <!-- Modal content IMAGE -->
@@ -44,29 +66,68 @@
         </div>
 
     </div>
-
+    <!-- --------------------------2----------------------- -->
     <div id="myModal2" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="close2">&times;</span>
             <img src="images/gallery_images/2.jpg" id="myImg2"></img>
+
+        </div>
+    </div>
+
+    <!-- -------------------------3------------------------ -->
+    <div id="myModal3" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close3">&times;</span>
+            <img src="images/gallery_images/3.jpg" id="myImg3"></img>
 
         </div>
 
     </div>
 
+    <!-- -------------------------4------------------------ -->
+    <div id="myModal4" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close4">&times;</span>
+            <img src="images/gallery_images/4.jpg" id="myImg4"></img>
+
+        </div>
+
+    </div>
+
+
+
     <script>
         // Get the modal
-        var modal2 = document.getElementById("myModal2");
+
         var modal = document.getElementById("myModal");
+        var modal2 = document.getElementById("myModal2");
+        var modal3 = document.getElementById("myModal3");
+        var modal4 = document.getElementById("myModal4");
+
 
         // Get the button that opens the modal
         var img1 = document.getElementById("myImg1");
         var img2 = document.getElementById("myImg2");
+        var img3 = document.getElementById("myImg3");
+        var img4 = document.getElementById("myImg4");
+
+
 
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
+        var span2 = document.getElementsByClassName("close2")[0];
+        var span3 = document.getElementsByClassName("close3")[0];
+        var span4 = document.getElementsByClassName("close4")[0];
+
+
+
 
         // When the user clicks the button, open the modal 
         img1.onclick = function () {
@@ -77,10 +138,35 @@
             modal2.style.display = "block";
         }
 
+        img3.onclick = function () {
+            modal3.style.display = "block";
+        }
+        img4.onclick = function () {
+            modal4.style.display = "block";
+        }
+
         // When the user clicks on <span> (x), close the modal
+
         span.onclick = function () {
             modal.style.display = "none";
+
         }
+
+        span2.onclick = function () {
+            modal2.style.display = "none";
+
+        }
+        span3.onclick = function () {
+            modal3.style.display = "none";
+
+        }
+        span4.onclick = function () {
+            modal4.style.display = "none";
+
+        }
+
+
+
 
         // When the user clicks anywhere outside of the modal, close it
         window.onclick = function (event) {
@@ -89,6 +175,12 @@
             }
             else if (event.target == modal2) {
                 modal2.style.display = "none";
+            }
+            else if (event.target == modal3) {
+                modal3.style.display = "none";
+            }
+            else if (event.target == modal4) {
+                modal4.style.display = "none";
             }
         }
 
