made the gallery more responsive added get involved web page

--- a/about-us.html
+++ b/about-us.html
@@ -25,7 +25,9 @@
 
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="active hover-underline-animation">ABOUT US</a>
-            <a href="#about" class=" hover-underline-animation">GET INVOLVED</a>
+            <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
+            <a href="gallery.html" class="hover-underline-animation">GALLERY</a>
+            <a href="#about" class=" hover-underline-animation">CONTACT US</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -41,7 +43,7 @@
     <main>
         <div class="about-us-shadow">
             <img src="/images/painted_hands_heart.jpg">
-            <h2>ABOUT US</h2>
+            <h2><u class="u">ABOU</u>T US</h2>
             <p>The Heart and Soul Foundation is a registered Non-Profit Company established in 2021 to adress the needs
                 of disadvantaged, underserved, and underprivileged children, and individuals of all ages from Quellerie
                 Park, Burgershoop, Apple Park and Krugersdorp West in Gauteng.</p>
