--- a/get_involved.html
+++ b/get_involved.html
@@ -24,7 +24,7 @@
 
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
-            <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
+            <a href="#getinvolved" class="active hover-underline-animation">GET INVOLVED</a>
             <a href="gallery.html" class="hover-underline-animation">GALLERY</a>
             <a href="test.html" class=" hover-underline-animation">CONTACT US</a>
 
@@ -39,8 +39,8 @@
 
     <div class="food-donations-color">
         <img src="/images/article_images/food_donations.jpg" class="food-donations-img">
-        <span class="article-main-heading">FOOD</span>
-        <span class="article-main-heading-2">DONATIONS</span>
+        <span class="get-involved-main-heading">GET</span>
+        <span class="get-involved-main-heading-2">INVOLVED</span>
         <div class="article-content">
             <p>The Heart and Soul Foundation is an organization that is dedicated to helping those in need by providing
                 food support to the children and elderly people in our care. There are many reasons why donating food
