--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <a href="index.html" class="active hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
-            <a href="test.html" class=" hover-underline-animation">GET INVOLVED</a>
+            <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
             <a href="gallery.html" class=" hover-underline-animation">GALLERY</a>
             <a href="test.html" class=" hover-underline-animation">CONTACT US</a>
 
