--- a/gallery.html
+++ b/gallery.html
@@ -5,11 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Document</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <nav>
+
+        <div class="topnav" id="myTopnav">
+            <img src="/images/hear&soulLogo.png" class="logo-position">
+
+            <a href="index.html" class="hover-underline-animation">HOME</a>
+            <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
+            <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
+            <a href="gallery.html" class="active hover-underline-animation">GALLERY</a>
+            <a href="test.html" class=" hover-underline-animation">CONTACT US</a>
+
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+            <hr>
+        </div>
+
+    </nav>
+    <div class="our-gallery-color">
+        <img src="/images/gallery_main.jpg" class="our-gallery-img">
+        <span class="our-gallery-main-heading">Our</span>
+        <span class="our-gallery-main-heading-2">Gallery</span>
+    </div>
+    <div class="gallery-responsive-gap">
+        &nbsp;
+    </div>
     <div class="main">
         <div class="gallery">
             <div class="gallery__item">
@@ -31,25 +61,25 @@
                 <img src="images/gallery_images/6.jpg" id="myImg6" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/7.jpg" id="myImg6" />
+                <img src="images/gallery_images/7.jpg" id="myImg7" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/8.jpg" id="myImg6" />
+                <img src="images/gallery_images/8.jpg" id="myImg8" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/9.jpg" id="myImg6" />
+                <img src="images/gallery_images/9.jpg" id="myImg9" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/10.jpg" id="myImg6" />
+                <img src="images/gallery_images/10.jpg" id="myImg10" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/11.jpg" id="myImg6" />
+                <img src="images/gallery_images/11.jpg" id="myImg11" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/12.jpg" id="myImg6" />
+                <img src="images/gallery_images/12.jpg" id="myImg12" />
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/13.jpg" id="myImg6" />
+                <img src="images/gallery_images/14.jpg" id="myImg14" />
             </div>
 
         </div>
@@ -101,7 +131,105 @@
 
     </div>
 
+    <!-- -------------------------5------------------------ -->
+    <div id="myModal5" class="modal bg">
 
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close5">&times;</span>
+            <img src="images/gallery_images/5.jpg" id="myImg5"></img>
+
+        </div>
+
+    </div>
+    <!-- -------------------------6------------------------ -->
+    <div id="myModal6" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close6">&times;</span>
+            <img src="images/gallery_images/6.jpg" id="myImg6"></img>
+
+        </div>
+
+    </div>
+    <!-- -------------------------7------------------------ -->
+    <div id="myModal7" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close7">&times;</span>
+            <img src="images/gallery_images/7.jpg" id="myImg7"></img>
+
+        </div>
+
+    </div>
+    <!-- -------------------------8------------------------ -->
+    <div id="myModal8" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close8">&times;</span>
+            <img src="images/gallery_images/8.jpg" id="myImg8"></img>
+
+        </div>
+
+    </div>
+    <!-- -------------------------9------------------------ -->
+    <div id="myModal9" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close9">&times;</span>
+            <img src="images/gallery_images/9.jpg" id="myImg9"></img>
+
+        </div>
+
+    </div>
+    <!-- -------------------------10------------------------ -->
+    <div id="myModal10" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close10">&times;</span>
+            <img src="images/gallery_images/10.jpg" id="myImg10"></img>
+
+        </div>
+
+    </div>
+    <!-- -------------------------11------------------------ -->
+    <div id="myModal11" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close11">&times;</span>
+            <img src="images/gallery_images/11.jpg" id="myImg11"></img>
+
+        </div>
+
+    </div>
+    <!-- -------------------------12------------------------ -->
+    <div id="myModal12" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close12">&times;</span>
+            <img src="images/gallery_images/12.jpg" id="myImg12"></img>
+
+        </div>
+
+    </div>
+    <!-- -------------------------14------------------------ -->
+    <div id="myModal14" class="modal bg">
+
+        <!-- Modal content IMAGE -->
+        <div class="modal-content">
+            <span class="close14">&times;</span>
+            <img src="images/gallery_images/14.jpg" id="myImg14"></img>
+
+        </div>
+
+    </div>
 
     <script>
         // Get the modal
@@ -110,6 +238,15 @@
         var modal2 = document.getElementById("myModal2");
         var modal3 = document.getElementById("myModal3");
         var modal4 = document.getElementById("myModal4");
+        var modal5 = document.getElementById("myModal5");
+        var modal6 = document.getElementById("myModal6");
+        var modal7 = document.getElementById("myModal7");
+        var modal8 = document.getElementById("myModal8");
+        var modal9 = document.getElementById("myModal9");
+        var modal10 = document.getElementById("myModal10");
+        var modal11 = document.getElementById("myModal11");
+        var modal12 = document.getElementById("myModal12");
+        var modal14 = document.getElementById("myModal14");
 
 
         // Get the button that opens the modal
@@ -117,6 +254,17 @@
         var img2 = document.getElementById("myImg2");
         var img3 = document.getElementById("myImg3");
         var img4 = document.getElementById("myImg4");
+        var img5 = document.getElementById("myImg5");
+        var img6 = document.getElementById("myImg6");
+        var img7 = document.getElementById("myImg7");
+        var img8 = document.getElementById("myImg8");
+        var img9 = document.getElementById("myImg9");
+        var img10 = document.getElementById("myImg10");
+        var img11 = document.getElementById("myImg11");
+        var img12 = document.getElementById("myImg12");
+        var img14 = document.getElementById("myImg14");
+
+
 
 
 
@@ -125,7 +273,15 @@
         var span2 = document.getElementsByClassName("close2")[0];
         var span3 = document.getElementsByClassName("close3")[0];
         var span4 = document.getElementsByClassName("close4")[0];
-
+        var span5 = document.getElementsByClassName("close5")[0];
+        var span6 = document.getElementsByClassName("close6")[0];
+        var span7 = document.getElementsByClassName("close7")[0];
+        var span8 = document.getElementsByClassName("close8")[0];
+        var span9 = document.getElementsByClassName("close9")[0];
+        var span10 = document.getElementsByClassName("close10")[0];
+        var span11 = document.getElementsByClassName("close11")[0];
+        var span12 = document.getElementsByClassName("close12")[0];
+        var span14 = document.getElementsByClassName("close14")[0];
 
 
 
@@ -141,9 +297,46 @@
         img3.onclick = function () {
             modal3.style.display = "block";
         }
+
         img4.onclick = function () {
             modal4.style.display = "block";
         }
+
+        img5.onclick = function () {
+            modal5.style.display = "block";
+        }
+
+        img6.onclick = function () {
+            modal6.style.display = "block";
+        }
+
+        img7.onclick = function () {
+            modal7.style.display = "block";
+        }
+
+        img8.onclick = function () {
+            modal8.style.display = "block";
+        }
+
+        img9.onclick = function () {
+            modal9.style.display = "block";
+        }
+
+        img10.onclick = function () {
+            modal10.style.display = "block";
+        }
+        img11.onclick = function () {
+            modal11.style.display = "block";
+        }
+
+        img12.onclick = function () {
+            modal12.style.display = "block";
+        }
+
+        img14.onclick = function () {
+            modal14.style.display = "block";
+        }
+
 
         // When the user clicks on <span> (x), close the modal
 
@@ -164,7 +357,44 @@
             modal4.style.display = "none";
 
         }
+        span5.onclick = function () {
+            modal5.style.display = "none";
 
+        }
+
+        span6.onclick = function () {
+            modal6.style.display = "none";
+
+        }
+
+        span7.onclick = function () {
+            modal7.style.display = "none";
+
+        }
+        span8.onclick = function () {
+            modal8.style.display = "none";
+
+        }
+        span9.onclick = function () {
+            modal9.style.display = "none";
+
+        }
+        span10.onclick = function () {
+            modal10.style.display = "none";
+
+        }
+        span11.onclick = function () {
+            modal11.style.display = "none";
+
+        }
+        span12.onclick = function () {
+            modal12.style.display = "none";
+
+        }
+        span14.onclick = function () {
+            modal14.style.display = "none";
+
+        }
 
 
 
@@ -182,12 +412,75 @@
             else if (event.target == modal4) {
                 modal4.style.display = "none";
             }
+            else if (event.target == modal5) {
+                modal5.style.display = "none";
+            }
+            else if (event.target == modal6) {
+                modal6.style.display = "none";
+            }
+            else if (event.target == modal7) {
+                modal7.style.display = "none";
+            }
+            else if (event.target == modal8) {
+                modal8.style.display = "none";
+            }
+            else if (event.target == modal9) {
+                modal9.style.display = "none";
+            }
+            else if (event.target == modal10) {
+                modal10.style.display = "none";
+            }
+            else if (event.target == modal11) {
+                modal11.style.display = "none";
+            }
+            else if (event.target == modal12) {
+                modal12.style.display = "none";
+            }
+            else if (event.target == modal14) {
+                modal14.style.display = "none";
+            }
         }
-
-
     </script>
-</body>
+    <footer>
+        <div class="content">
+            <div class="left box">
+                <div class="topic"><span class="und-footer">Contact U</span>S</div>
+                <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
+                <p class="und-footer">Ph. : +27 72 456 0669</p>
+                <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
 
-</html>
+
+            </div>
+
+            <div class="right box">
+                <div class="topic">Email us</div>
+                <form action="https://formspree.io/f/mzboolwv" method="POST">
+                    <label>
+                        <input type="email" placeholder="Enter email address" name="email">
+                    </label>
+                    &nbsp;
+                    <p style="font-size: x-large">Message</p>
+
+                    <label>
+
+                        <textarea name="message" placeholder=" Write a description..."></textarea>
+                    </label>
+                    <input type="submit" name="submit" value="Send">
+                    <div class="media-icons">
+                        <a href="https://www.facebook.com/heartandsoulcommunitycentre" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/heart_and_soul_foundation_/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
+
+                    </div>
+                </form>
+            </div>
+
+
+        </div>
+
+    </footer>
+    <script src="app.js"></script>
+</body>
 
 </html>
