added 2 more articles, made the gallery more responsive

--- a/blanket-run.html
+++ b/blanket-run.html
@@ -24,7 +24,7 @@
 
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
-            <a href="#getinvolved" class="active hover-underline-animation">GET INVOLVED</a>
+            <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
             <a href="gallery.html" class="hover-underline-animation">GALLERY</a>
             <a href="test.html" class=" hover-underline-animation">CONTACT US</a>
 
@@ -38,36 +38,50 @@
 
 
     <div class="food-donations-color">
-        <img src="/images/get_involved.jpg" class="food-donations-img">
-        <span class="get-involved-main-heading">GET</span>
-        <span class="get-involved-main-heading-2">INVOLVED</span>
+        <img src="/images/article_images/blankets.jpg" class="food-donations-img">
+        <span class="blanket-main-heading">WINTER</span>
+        <span class="blanket-main-heading-2">BLANKET RUN</span>
         <div class="article-content">
-            <p>By donating your time, money, or resources to Heart and Soul Foundation, you are helping to make a
-                real difference in the world. You are supporting efforts to combat poverty, promote education, advance
-                human rights and so much more. Your support can help us to ensure that we have the resources we
-                need to continue our work and that the communities and causes we serve receive the support and
-                attention they deserve. Together, we can make a difference and create a better future for all.
+            <p>Extreme poverty is a harsh reality that affects millions of people worldwide, and its effects are
+                particularly devastating during the winter months. For many people living in poverty, the winter brings
+                a
+                host of challenges, from harsh weather conditions to the difficulty of staying warm and dry. One of the
+                most significant struggles for people living in extreme poverty during the winter is the lack of access
+                to
+                warm clothing and blankets. Many families cannot afford to buy warm clothing or blankets, and as a
+                result, they are left exposed to the elements. This can lead to serious health problems, including
+                hypothermia and frostbite. Children are particularly vulnerable, as they may not have the ability to
+                keep
+                themselves warm and dry in harsh weather conditions.</p>
+            <p>That&#39;s where the Heart and Soul Foundation
+                comes in, and why donating blankets to our organization can make a real difference in the lives of these
+                children. By donating blankets to the Heart and Soul Foundation, you can help provide warmth and
+                comfort to children who may be struggling to stay warm during the colder months. Your donation can
+                help ensure that these children have access to the basic necessities they need to stay healthy and
+                happy, even when resources are scarce. In addition to providing warmth, your donation can also help
+                boost the morale of these children. Knowing that others care about their well-being can help them feel
+                more connected to their community and less alone in their struggles. </p>
 
-            <h2>Needs :</h2>
-            <p>Heart and Soul Foundation accepts any donation – clothes, old furniture, electric goods, educational
-                toys ect.
-                We always need fresh or tinned food to prepare a warm wholesome meal for the children and individuals in
-                the community. These products include: Maize meal, Oats, Wheatbix, Rice Crispies, Corn Flakes, White or
-                brown sugar, Long-life Milk, Flour, Butter, Cooking Oil, Bread, Tinned Food, Rice, Pasta, Oros
-                Cooldrink, Yeast, Soup and sauce powder, Eggs, Fresh Meat, Fresh fruit and vegetables, Frozen mix
-                vegetables, IQF Chicken, Vienna's, Poloni, Cheese, Spices and salt, Tomato Sauce, Instant Noodles,
-                Yogurt, Jam, Peanut butter, Syrup, Bread Spread, Cookies, Simba Crisps, Sweets.
-                Other necessities:
-                Cleaning agents, Face soap, Deodorant, Paper Rolls, Disinfectant Liquid, Hand Wash, Steel Wool, Jik,
-                Toothpaste for children and adults, Toothbrushes, Baby diapers, Baby formula, Wax Paper, Tin Foil, Small
-                and large clear plastic bags, Black Bags, Tissues, Wet Wipes, Adult nappies for the elderly people in
-                the old age homes.</p>
+            <p>In addition to providing warmth, your donation can also help
+                boost the morale of these children. Knowing that others care about their well-being can help them feel
+                more connected to their community and less alone in their struggles. This can have a positive impact on
+                their mental health and overall sense of well-being. We believe that everyone deserves to stay warm
+                and dry, especially during the winter months when the weather can be particularly harsh. By providing
+                warm clothing and blankets, we are helping to alleviate the suffering of those living in poverty, giving
+                them the tools they need to stay healthy and comfortable. Donating blankets and warm clothes to Heart
+                and Soul Foundation is an excellent way to make a tangible difference in the lives of those affected by
+                extreme poverty. Even a small donation can go a long way in providing warmth and comfort to those
+                who need it most. By supporting our organization, you can help to ensure that children and individuals
+                in impoverished communities have access to warm clothing and blankets, which can make a significant
+                difference in their lives.
+                I encourage you to consider making a donation today and help make a positive impact in the lives of
+                these children.
+                More details will be shared on all of our platforms.</p>
 
         </div>
-
     </div>
-    <div class=" also-in-this-section-get-involved">
-        <h2>Also in this section</h2>
+    <div class="also-in-this-section-blanket">
+        <h2 c>Also in this section</h2>
 
         <div class="article-1-light-shadow">
 
