--- a/golf-day.html
+++ b/golf-day.html
@@ -24,7 +24,7 @@
 
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
-            <a href="#getinvolved" class="active hover-underline-animation">GET INVOLVED</a>
+            <a href="get_involved.html" class=" hover-underline-animation">GET INVOLVED</a>
             <a href="gallery.html" class="hover-underline-animation">GALLERY</a>
             <a href="test.html" class=" hover-underline-animation">CONTACT US</a>
 
@@ -38,36 +38,72 @@
 
 
     <div class="food-donations-color">
-        <img src="/images/get_involved.jpg" class="food-donations-img">
-        <span class="get-involved-main-heading">GET</span>
-        <span class="get-involved-main-heading-2">INVOLVED</span>
+        <img src="/images/article_images/golf.jpg" class="food-donations-img">
+        <span class="golf-main-heading">GOLF</span>
+        <span class="golf-main-heading-2">DAY</span>
         <div class="article-content">
-            <p>By donating your time, money, or resources to Heart and Soul Foundation, you are helping to make a
-                real difference in the world. You are supporting efforts to combat poverty, promote education, advance
-                human rights and so much more. Your support can help us to ensure that we have the resources we
-                need to continue our work and that the communities and causes we serve receive the support and
-                attention they deserve. Together, we can make a difference and create a better future for all.
-
-            <h2>Needs :</h2>
-            <p>Heart and Soul Foundation accepts any donation – clothes, old furniture, electric goods, educational
-                toys ect.
-                We always need fresh or tinned food to prepare a warm wholesome meal for the children and individuals in
-                the community. These products include: Maize meal, Oats, Wheatbix, Rice Crispies, Corn Flakes, White or
-                brown sugar, Long-life Milk, Flour, Butter, Cooking Oil, Bread, Tinned Food, Rice, Pasta, Oros
-                Cooldrink, Yeast, Soup and sauce powder, Eggs, Fresh Meat, Fresh fruit and vegetables, Frozen mix
-                vegetables, IQF Chicken, Vienna's, Poloni, Cheese, Spices and salt, Tomato Sauce, Instant Noodles,
-                Yogurt, Jam, Peanut butter, Syrup, Bread Spread, Cookies, Simba Crisps, Sweets.
-                Other necessities:
-                Cleaning agents, Face soap, Deodorant, Paper Rolls, Disinfectant Liquid, Hand Wash, Steel Wool, Jik,
-                Toothpaste for children and adults, Toothbrushes, Baby diapers, Baby formula, Wax Paper, Tin Foil, Small
-                and large clear plastic bags, Black Bags, Tissues, Wet Wipes, Adult nappies for the elderly people in
-                the old age homes.</p>
+            <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds for
+                our cause. Our organization is dedicated to providing a safe and nurturing environment for children who
+                are in need. We believe that every child deserves a chance to learn, grow, and thrive. Unfortunately,
+                many children in our community do not have access to the basic necessities of life, such as food,
+                shelter,
+                and education. This is where our organization comes in. We are committed to providing these children
+                with the support they need to succeed.
+                The Golf day is an important event for us because it will help us to raise the funds we need to pay
+                rent,
+                feed our children three times a day, and provide them with educational supplies. These are basic
+                necessities that many of us take for granted, but for these children, they can make all the difference.
+            </p>
+            <p>With your support, we can ensure that these children have a safe and comfortable place to go, food to
+                eat, and the tools they need to learn and grow.</p>
+            <p>The purpose of this day is to bring people together to support our cause. Golf is a fun and social sport
+                that can be enjoyed by people of all ages and skill levels. By participating in the Golf day, you can
+                have
+                fun while making a difference in the lives of children in need. The funds we raise will go directly to
+                our
+                organization, allowing us to continue providing the support these children need.</p>
+            <p>Golf is a great way to spend time with friends and family while supporting a good cause. Whether you
+                are an experienced golfer or a beginner, there is something for everyone on the golf course. Golf is a
+                sport that requires concentration, skill, and strategy, which makes it both challenging and rewarding.
+                It
+                is also a great way to stay active and enjoy the outdoors.</p>
+            <p>While you are having fun on the golf course, it is important to remember the reason why we are here.
+                Every rand we raise will go towards providing a safe and nurturing environment for children in need. By
+                participating in the Golf day, you are helping to make a difference in the lives of these children.</p>
+            <p>In addition to the satisfaction of knowing that you are making a difference, participating in the Golf
+                day
+                can also be a lot of fun. You can enjoy a beautiful day on the golf course, socialize with friends and
+                family, and take part in a variety of activities and events. The Golf day is a great way to spend time
+                with
+                loved ones while supporting a good cause.</p>
+            <p>So, come out and join us for a day of golf, fun, and fundraising. Together, we can make a difference in
+                the lives of these children and help them to achieve their full potential.</p>
+            <p><strong>Date: 16 May 2023</strong></p>
+            <p><strong>Time: Tee off at 10:30</strong></p>
+            <p><strong>Place: Krugersdorp Golf Club</strong></p>
+            <p><strong>Prices: </strong></p>
+            <ul>
+                <li>R3000 per four-ball</li>
+                <li>R320 per 2-seater golf cart</li>
+                <li>R500 per hole sponsor</li>
+                <li>R1000 hole 9 &amp; 18 sponsor</li>
+            </ul>
+            <p>Dinner and prize giving to take place after the event.</p>
+            <p>Payment confirms your booking. Please use your initials and surname as reference.</p>
+            <p><strong>Donations :</strong></p>
+            <p>If you cannot join us for this event, but still want to contribute towards Heart and Soul Foundation, it
+                will be highly appreciated.
+            </p>
+            <p><strong>Banking Details :</strong> Heart and Soul Foundation FNB Current Account</p>
+            <p><strong>Account Number : </strong>62903485705</p>
+            <p><strong>Branch Code :</strong> 250241 </p>
+            <p><strong>Contact details :</strong> opperman.estelle@gmail.com</p>
+            <p><strong>Chris Opperman :</strong> 072 515 5350</p>
 
         </div>
-
     </div>
-    <div class=" also-in-this-section-get-involved">
-        <h2>Also in this section</h2>
+    <div class="also-in-this-section-golf">
+        <h2 c>Also in this section</h2>
 
         <div class="article-1-light-shadow">
 
