--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
             <div class="article-1-light-shadow">
 
-                <img src="/images/school-kid.jpg" class="article-1-picture">
+                <img src="/images/article_images/food_donations.jpg" class="article-1-picture">
                 <h4 class="article-title">FOOD DONATIONS</h4>
                 <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
                     helping those in need by providing
@@ -117,19 +117,20 @@
 
             <div class="article-2-light-shadow">
 
-                <img src="/images/school-kid.jpg" class="article-1-picture">
-                <h4 class="article-title">Save the children</h4>
-                <p class="article-2-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                    sopdksdo
-                    sopdksopdk</p>
-                <p class="article-2-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                    sopdksdo
-                    sopdksopdk</p>
+                <img src="/images/article_images/blankets.jpg" class="article-1-picture">
+                <h4 class="article-title">WINTER BLANKET RUN</h4>
+                <p class="article-2-paragraph-1">Winter can be an incredibly difficult time for many children,
+                    particularly those from less privileged
+                    backgrounds.
+                </p>
+                <p class="article-2-paragraph-2">As temperatures drop, these children may lack access to warm clothing
+                    and blankets,
+                    leaving them at risk of illness and discomfort...</p>
 
 
 
                 <h5 class="article-1-readmore"><i>
-                        <a href="about-us.html" class="link">Read More </a>
+                        <a href="blanket-run.html" class="link">Read More </a>
                     </i></h5>
             </div>
 
@@ -137,20 +138,20 @@
 
             <div class="article-3-light-shadow">
 
-                <img src="/images/school-kid.jpg" class="article-1-picture">
-                <h4 class="article-title">Save the children</h4>
-                <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                    osdfkdof
-                    sopdksdo
-                    sopdksopdk</p>
-                <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                    osdfkdof
-                    sopdksdo
-                    sopdksopdk</p>
+                <img src="/images/article_images/golf.jpg" class="article-1-picture">
+                <h4 class="article-title">2023 GOLF DAY</h4>
+                <p class="article-3-paragraph-1">The 16th of May is an important day for our organization. We are
+                    hosting a Golf day to raise funds for
+                    our cause. Our organization is dedicated to providing a safe and nurturing environment for children
+                    who
+                    are in need.</p>
+                <p class="article-3-paragraph-2">need. We believe that every child deserves a chance to learn, grow, and
+                    thrive. Unfortunately,
+                    many children in our community do not have access to the basic necessities...</p>
 
 
                 <h5 class="article-1-readmore"><i>
-                        <a href="about-us.html" class="link">Read More </a>
+                        <a href="golf-day.html" class="link">Read More </a>
                     </i></h5>
 
                 <div class="bottom-articles">
@@ -158,7 +159,7 @@
                     <div class="article-4-light-shadow">
 
                         <img src="/images/school-kid.jpg" class="article-4-picture">
-                        <h4 class="article-title">Save the children</h4>
+                        <h4 class="article-title">Empowering Communities to Break the Cycle of Poverty</h4>
                         <p class="article-4-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
                             osdfkdof
                             sopdksdo
