added more images

--- a/about-us.html
+++ b/about-us.html
@@ -44,7 +44,7 @@
         <div class="about-us-shadow">
             <img src="/images/painted_hands_heart.jpg">
             <h2><u class="u">ABOU</u>T US</h2>
-            <p>The Heart and Soul Foundation is a registered Non-Profit Company established in 2021 to adress the needs
+            <p>The Heart and Soul Foundation is a registered Non-Profit Company established in 2021 to address the needs
                 of disadvantaged, underserved, and underprivileged children, and individuals of all ages from Quellerie
                 Park, Burgershoop, Apple Park and Krugersdorp West in Gauteng.</p>
 
