--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="/images/children.jpg" class="slideshow-images">
-            <div class="text">Caption Text</div>
+            <img src="/images/charity1.gif" class="slideshow-images">
+            <div class="text"></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="/images/donations.jpg" class="slideshow-images">
-            <div class="text">Caption Two</div>
+            <img src="/images/charity2.gif" class="slideshow-images">
+            <div class="text"></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="/images/salt.jpg" class="slideshow-images">
-            <div class="text">Caption Three</div>
+            <img src="/images/charity3.gif" class="slideshow-images">
+            <div class="text"></div>
         </div>
 
     </div>
@@ -158,7 +158,7 @@
                     <!-- article 4 -->
                     <div class="article-4-light-shadow">
 
-                        <img src="/images/school-kid.jpg" class="article-4-picture">
+                        <img src="/images/article_images/empty wallet.jpg" class="article-4-picture">
                         <h4 class="article-title">Empowering Communities to Break the Cycle of Poverty</h4>
                         <p class="article-4-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
                             osdfkdof
@@ -179,8 +179,8 @@
 
                     <div class="article-5-light-shadow">
 
-                        <img src="/images/school-kid.jpg" class="article-5-picture">
-                        <h4 class="article-title">Save the children</h4>
+                        <img src="/images/donations.jpg" class="article-5-picture">
+                        <h4 class="article-title">The power of donations</h4>
                         <p class="article-5-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
                             osdfkdof
                             sopdksdo
